--- a/admin.html
+++ b/admin.html
@@ -25,12 +25,18 @@
   <section id="servicos" class="py-5 mb-5">
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col" id="col">
 
 
           <h3>Serviços</h3>
           <button class="btn btn-primary" id="cadastrarCliente">Adicionar novo</button>
-          <table class="table my-5">
+          <div>
+            <form action="">
+              <input type="text">
+
+            </form>
+          </div>
+          <table class="table my-5" id="dados_tabela">
             <thead>
               <tr>
                 <td>Nome</td>
@@ -77,7 +83,7 @@
     <div class="container text-center">
       <p class="m-0">
         copyright 2021
-        <img src="imagens/favicon.png" width="30" alt="" /> agência CRONOS
+        <!-- <img src="imagens/favicon.png" width="30" alt="" /> agência CRONOS -->
       </p>
     </div>
   </footer>
@@ -91,7 +97,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
-  <script src="main.js"></script>
+  <script src="teste.js"></script>
 </body>
 
 </html>
