Finalizando a interação update com o layout.

--- a/admin.html
+++ b/admin.html
@@ -32,7 +32,7 @@
             <button class="btn btn-primary" id="cadastrarCliente">
               Adicionar novo
             </button>
-            <table class="table my-5">
+            <table id="tabelaServicos" class="table my-5">
               <thead>
                 <tr>
                   <td>Nome</td>
