visualização de itens na página

--- a/admin.html
+++ b/admin.html
@@ -42,7 +42,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <!-- <tr>
                 <td>Desenvolvimento Web</td>
                 <td><img src="imagens/ilustra-web.png" class="img-fluid" /></td>
                 <td>Consequatur debitis ipsa numquam illum placeat quod deleniti.</td>
@@ -68,7 +68,7 @@
                   <button class="btn btn-secondary m-1">editar</button>
                   <button class="btn btn-danger m-1">excluir</button>
                 </td>
-              </tr>
+              </tr> -->
             </tbody>
           </table>
         </div>
@@ -85,6 +85,7 @@
           <form class="form" id="form">
               <input type="text" class="input" id="nome" placeholder="Nome do curso" required >
               <input type="text" class="input" id="descricao" placeholder="Descrição do curso" required >
+              <input type="text" class="input" id="img" placeholder="Insira endereço de imagem">
           </form>
           <footer class="form-footer">
             <button class="btn btn-primary" id="salvar">Salvar</button>
