Versão final com todas funcionalidades JS rodando na branch develop [faltando renderizar]

--- a/admin.html
+++ b/admin.html
@@ -42,7 +42,7 @@
               </tr>
             </thead>
             <tbody>
-              <!-- <tr>
+               <!-- <tr> 
                 <td>Desenvolvimento Web</td>
                 <td><img src="imagens/ilustra-web.png" class="img-fluid" /></td>
                 <td>Consequatur debitis ipsa numquam illum placeat quod deleniti.</td>
@@ -60,7 +60,7 @@
                   <button class="btn btn-danger m-1">excluir</button>
                 </td>
               </tr>
-              <tr>
+              <tr> 
                 <td>Consultoria UX</td>
                 <td><img src="imagens/ilustra-ux.png" class="img-fluid" /></td>
                 <td>Consequatur debitis ipsa numquam illum placeat quod deleniti.</td>
@@ -68,7 +68,7 @@
                   <button class="btn btn-secondary m-1">editar</button>
                   <button class="btn btn-danger m-1">excluir</button>
                 </td>
-              </tr> -->
+              </tr>  -->
             </tbody>
           </table>
         </div>
@@ -83,9 +83,9 @@
               <span class="modal-close" id="modalClose">&#10006;</span>
           </header>
           <form class="form" id="form">
-              <input type="text" class="input" id="nome" placeholder="Nome do curso" required >
-              <input type="text" class="input" id="descricao" placeholder="Descrição do curso" required >
-              <input type="text" class="input" id="img" placeholder="Insira endereço de imagem">
+              <input type="text" id="nome" data-index="new" class="input" required placeholder="Nome do curso" >
+              <input type="text" class="input" id="descricao" required placeholder="Descrição do curso" >
+              <input type="text" class="input" id="img" required placeholder="Insira endereço de imagem" >
           </form>
           <footer class="form-footer">
             <button class="btn btn-primary" id="salvar">Salvar</button>
@@ -111,7 +111,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
-  <script src="teste.js"></script>
+  <script src="teste2.js"></script>
 </body>
 
 </html>
