--- a/crud/public/index.html
+++ b/crud/public/index.html
@@ -120,7 +120,7 @@
   <script src="Arquivo.js"></script>
 </div>
 
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae necessitatibus voluptatem similique facilis voluptas. Tenetur beatae iure officia asperiores consequatur deleniti aliquid, quam alias, sed, iusto impedit velit odio rerum?
+<img src="crud/public/imagen_readme/editar.png">
 </body>
 
 </html>
